<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mafia_boss" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp"
        android:text="@string/name"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:text="橋爪テスト"
        android:background="@color/white" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etName"
        android:layout_below="@+id/etName"
        android:layout_marginTop="19dp"
        android:text="@string/email"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:text="info@hotmix.jp"
        android:background="@color/white" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etPass"
        android:layout_below="@+id/etPass"
        android:layout_marginTop="21dp"
        android:text="@string/phone_no"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:inputType="phone"
        android:text="08000000000"
        android:background="@color/white" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etPhone"
        android:layout_below="@+id/etPhone"
        android:layout_marginTop="60dp"
        android:text="@string/location"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/etHomeLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:background="@color/white" />

    <EditText
        android:id="@+id/etHomeLng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etHomeLat"
        android:layout_below="@+id/etHomeLat"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:background="@color/white" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPhone"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/textView4"
        android:text="@string/get_address"
        android:background="@color/white" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etHomeLng"
        android:layout_below="@+id/etHomeLng"
        android:layout_marginTop="14dp"
        android:text="@string/ok_button"
        android:background="@color/white" />

</RelativeLayout>
